CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (FishTankVR)

find_package(OpenCV REQUIRED)
find_package(Qt4 REQUIRED)
find_library(QGLViewer_LIBRARY NAMES qglviewer-qt4 qglviewer PATHS ${QGLViewer_PKGCONF_LIBRARY_DIRS} REQUIRED)

set(QT_USE_QTOPENGL TRUE)
set(QT_USE_QTXML TRUE)

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR} ${QGLViewer_INCLUDE_DIR})

FILE(GLOB FishTankVR_SOURCE "FishTankVR.cpp")

ADD_EXECUTABLE(FishTankVR ${FishTankVR_SOURCE})

TARGET_LINK_LIBRARIES(FishTankVR ${OpenCV_LIBS} ${QT_LIBRARIES} ${QGLViewer_LIBRARY})